# mecdm_superapp

./: .env.example  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  cross_dataset_relations.json  dataset_mecdm.json  dataset_schema.json  flights_dataset_config.json  main.py  mecdm_superapp_config.json  migrate_mecdm.py  nhm_api_download.py  pyproject.toml  setup_memory_bank.py  toolbox-alloydb-local.yaml  toolbox-alloydb-remote.yaml
.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
data_science/: agent.py  fast_api_app.py  prompts.py  tools.py
data_science/app_utils/: db.py  expression_validator.py  llm_client.py  models.py  sql_validator.py  stat_query_compiler.py  telemetry.py  typing.py  user_db.py  whatsapp_models.py
data_science/prompts/: __init__.py  intent_classifier.py  prompt_builder.py  task_blocks.py
data_science/routers/: chat.py  feedback.py  upload.py  whatsapp.py
data_science/services/: file_processor.py  whatsapp_formatter.py  whatsapp_service.py
data_science/sub_agents/: __init__.py
data_science/sub_agents/alloydb/: agent.py  prompts.py  tools.py
data_science/sub_agents/analytics/: agent.py  prompts.py
data_science/sub_agents/bigquery/chase_sql/: chase_constants.py  llm_utils.py
data_science/sub_agents/bqml/: prompts.py
data_science/utils/: map_utils.py  reference_guide_RAG.py  utils.py
deployment/: deploy.py  test_deployment.py
deployment/terraform/: github.tf  iam.tf  locals.tf  service.tf  storage.tf  variables.tf
deployment/terraform/dev/: apis.tf  iam.tf  service.tf  variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
eval/: test_eval.py
migrations/: 001_chat_and_feedback.sql  run_migration.py
tests/: test_agents.py
tests/integration/: test_agent.py  test_server_e2e.py
tests/load_test/: README.md  load_test.py
tests/unit/: test_dummy.py
